# NamelessC2

./: README.MD
NamelessImplant/: Cargo.toml
NamelessImplant/clroxide/: Cargo.toml
NamelessImplant/clroxide/src/: lib.rs
NamelessImplant/clroxide/src/clr/: mod.rs
NamelessImplant/clroxide/src/primitives/: helpers.rs  iappdomain.rs  iassembly.rs  iclrmetahost.rs  iclrruntimeinfo.rs  iconstructorinfo.rs  icorruntimehost.rs  ienumunknown.rs  imethodinfo.rs  ipropertyinfo.rs  itype.rs  iunknown.rs  mod.rs  types.rs
NamelessImplant/src/: ekko.rs  lib.rs  types.rs
NamelessImplant/src/commands/: cat.rs  exec_ass.rs  getenv.rs  ls.rs  mod.rs  ps.rs  token_manipulation.rs  upload.rs
NamelessImplant/src/utils/: COM_OpenProcess.rs  Pe.rs  Peb.rs  etw_patch.rs  hashstring.rs  mod.rs  resolve_syscalls.rs
NamelessServer/: Cargo.toml  cert.pem  key.pem  schema.sql
NamelessServer/src/: main.rs
NamelessTerminal/: Cargo.toml  notes
NamelessTerminal/src/: main.rs
sRDI/: ConvertToShellcode.py  ShellcodeRDI.py
