[package]
name = "NamelessTerminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.16", features = ["blocking"]}
serde_json = "1.0.95"
prettytable = "0.10.0"
serde = { version = "1.0.130", features = ["derive"] }
chrono = "0.4.24"
clearscreen = "2.0.0"
base64 = "0.21.0"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
